Second Major Changes

--- a/index.html
+++ b/index.html
@@ -36,8 +36,110 @@
             </div>
         </div>
     </section>
+    
+    <!--------------------------------->
 
-    <p>And let’s end all this nonsense about how long sentences = run-on sentences. You can have a six-word run-on sentence (“I went shopping I ate donuts.”), while most of the sentences below are much, much longer than that and are not run-ons (except for a few examples like Jose Saramago).  But whether the sentence is grammatically correct isn’t nearly as important as whether the sentence is fun or beautiful.</p>
+    <section class="about" id="about">
+        <div class="max-width">
+            <h2 class="title">About me</h2>
+            <div class="about-content">
+                <div class="column left">
+                    <img src="images/meustp.jpg" alt="">
+                </div>
+                <div class="column right">
+                    <div class="text">I'm Carlo and I'm an <span> IT Student</span></div>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident consectetur tempora quas repudiandae magni minima accusamus sunt esse laudantium. Perferendis, laudantium, reiciendis facere eum dolor dignissimos itaque magnam laborum nobis labore ullam sapiente esse ab minus blanditiis. Modi voluptates dolorem iure laboriosam error non totam veritatis tempore vel! Repudiandae voluptatem eum cupiditate officia rerum aliquam mollitia eos rem magni necessitatibus?</p>
+                    <a href="#">Download CV</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--------------------------------->
+
+    <section class="services" id="services">
+        <div class="max-width">
+            <h2 class="title">My Services</h2>
+            <div class="serv-content">
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-paint-brush"></i>
+                        <div class="text">Coming Soon!</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos vel odio consequatur mollitia, fugit dicta!</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-chart-line"></i>
+                        <div class="text">Coming Soon!</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos vel odio consequatur mollitia, fugit dicta!</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-code"></i>
+                        <div class="text">Coming Soon!</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos vel odio consequatur mollitia, fugit dicta!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--------------------------------->
+
+    <section class="skills" id="skills">
+        <div class="max-width">
+            <h2 class="title">My skills</h2>
+            <div class="skills-content">
+                <div class="column left">
+                    <div class="text">My creative skills & experiences.</div>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id assumenda nulla iusto doloribus rem deserunt nobis pariatur atque? Fugit, enim doloribus. Reprehenderit, maiores veritatis incidunt velit dignissimos quos modi quas accusamus corporis soluta exercitationem asperiores sequi voluptas neque, expedita assumenda necessitatibus sit voluptatum? Esse dolorem adipisci aperiam magnam nulla magni voluptas inventore nihil deleniti rem, impedit perspiciatis iste possimus tempora?</p>
+                    <a href="#">Read more</a>
+                </div>
+                <div class="column right">
+                    <div class="bars">
+                        <div class="info">
+                            <span>HTML</span>
+                            <span>10%</span>
+                        </div>
+                        <div class="line html"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>CSS</span>
+                            <span>5%</span>
+                        </div>
+                        <div class="line css"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>JavaScript</span>
+                            <span>3%</span>
+                        </div>
+                        <div class="line js"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>PHP</span>
+                            <span>0%</span>
+                        </div>
+                        <div class="line php"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>MySQL</span>
+                            <span>20%</span>
+                        </div>
+                        <div class="line mysql"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="script.js"></script>
 </body>
 </html>
