--- a/index.html
+++ b/index.html
@@ -7,18 +7,25 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/ca47faa581.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
 </head>
 <body>
+    <div class="scroll-up-btn">
+        <i class="fas fa-angle-up"></i>
+    </div>
     <nav class="navbar">
         <div class="max-width">
             <div class="logo"><a href="#">Suaybag<span>uio.</span></a></div>
             <ul class="menu">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Skills</a></li>
-                <li><a href="#">Teams</a></li>
-                <li><a href="#">Contacts</a></li>
+                <li><a href="#home" class="menu-btn">Home</a></li>
+                <li><a href="#about" class="menu-btn">About</a></li>
+                <li><a href="#services" class="menu-btn">Services</a></li>
+                <li><a href="#skills" class="menu-btn">Skills</a></li>
+                <li><a href="#teams" class="menu-btn">Teams</a></li>
+                <li><a href="#contact" class="menu-btn">Contacts</a></li>
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
@@ -31,7 +38,7 @@
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Carlo Suaybaguio</div>
-                <div class="text-3">And I'm an <span>IT Student</span></div>
+                <div class="text-3">And I'm a <span class="typing"></span></div>
                 <a href="#">Donate</a>
             </div>
         </div>
@@ -47,7 +54,7 @@
                     <img src="images/meustp.jpg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Carlo and I'm an <span> IT Student</span></div>
+                    <div class="text">I'm Carlo and I'm a <span class="typing-2"></span></div>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident consectetur tempora quas repudiandae magni minima accusamus sunt esse laudantium. Perferendis, laudantium, reiciendis facere eum dolor dignissimos itaque magnam laborum nobis labore ullam sapiente esse ab minus blanditiis. Modi voluptates dolorem iure laboriosam error non totam veritatis tempore vel! Repudiandae voluptatem eum cupiditate officia rerum aliquam mollitia eos rem magni necessitatibus?</p>
                     <a href="#">Download CV</a>
                 </div>
@@ -139,6 +146,117 @@
             </div>
         </div>
     </section>
+
+    <!--------------------------------->
+
+    <section class="teams" id="teams">
+        <div class="max-width">
+            <h2 class="title">My teams</h2>
+            <div class="carousel owl-carousel">
+                <div class="card">
+                    <div class="box">
+                        <img src="images/locked.jpg" alt="">
+                        <div class="text">LF teammate</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="images/locked.jpg" alt="">
+                        <div class="text">LF teammate</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="images/locked.jpg" alt="">
+                        <div class="text">LF teammate</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="images/locked.jpg" alt="">
+                        <div class="text">LF teammate</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="images/locked.jpg" alt="">
+                        <div class="text">LF teammate</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--------------------------------->
+
+    <section class="contact" id="contact">
+        <div class="max-width">
+            <h2 class="title">Contact me</h2>
+            <div class="contact-content">
+                <div class="column left">
+                    <div class="text">Get in Touch</div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae dolore ullam dicta nemo laudantium rem perferendis et magni, dolores quo.</p>
+                    <div class="icons">
+                        <div class="row">
+                            <i class="fas fa-user"></i>
+                            <div class="info">
+                                <div class="head">Name</div>
+                                <div class="sub-title">Carlo Dominic Suaybaguio</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <div class="info">
+                                <div class="head">Address</div>
+                                <div class="sub-title">Opol, Misamis Oriental</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fas fa-envelope"></i>
+                            <div class="info">
+                                <div class="head">Email</div>
+                                <div class="sub-title">suaybaguio.carlodominic@gmail.com</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="column right">
+                    <div class="text">Message me</div>
+                    <form action="#">
+                        <div class="fields">
+                            <div class="field name">
+                                <input type="text" placeholder="Name" required>
+                            </div>
+                            <div class="field email">
+                                <input type="email" placeholder="Email" required>
+                            </div>
+                        </div>
+                        <div class="field">
+                            <input type="text" placeholder="Subject" required>
+                        </div>
+                        <div class="field textarea">
+                            <textarea cols="30" rows="10" placeholder="Describe project.." required></textarea>
+                        </div>
+                        <div class="button">
+                            <button type="submit">Send message</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--------------------------------->
+
+    <footer>
+        <span>Created by <a href="#">Carlo Dominic M. Suaybaguio</a> | <span class="far fa-copyright"></span> 2023 All rights reserved.</span>
+    </footer>
+
 
     <script src="script.js"></script>
 </body>
