--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         <div class="max-width">
             <div class="logo"><a href="#">Suaybag<span>uio.</span></a></div>
             <ul class="menu">
-                <li><a href="#home" class="menu-btn">Home</a></li>
-                <li><a href="#about" class="menu-btn">About</a></li>
-                <li><a href="#services" class="menu-btn">Services</a></li>
-                <li><a href="#skills" class="menu-btn">Skills</a></li>
-                <li><a href="#teams" class="menu-btn">Teams</a></li>
-                <li><a href="#contact" class="menu-btn">Contacts</a></li>
+                <li><a href="#home" class="menu-btn 1">Home</a></li>
+                <li><a href="#about" class="menu-btn 2">About</a></li>
+                <li><a href="#services" class="menu-btn 3">Services</a></li>
+                <li><a href="#skills" class="menu-btn 4">Skills</a></li>
+                <li><a href="#teams" class="menu-btn 5">Teams</a></li>
+                <li><a href="#contact" class="menu-btn 6">Contacts</a></li>
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
