semi-final part 2 changes

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Carlo Suaybaguio</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="#">Donate</a>
+                <a href="paypal.me/emuflop">Donate</a>
             </div>
         </div>
     </section>
@@ -56,7 +56,7 @@
                 <div class="column right">
                     <div class="text">I'm Carlo and I'm a <span class="typing-2"></span></div>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident consectetur tempora quas repudiandae magni minima accusamus sunt esse laudantium. Perferendis, laudantium, reiciendis facere eum dolor dignissimos itaque magnam laborum nobis labore ullam sapiente esse ab minus blanditiis. Modi voluptates dolorem iure laboriosam error non totam veritatis tempore vel! Repudiandae voluptatem eum cupiditate officia rerum aliquam mollitia eos rem magni necessitatibus?</p>
-                    <a href="#">Download CV</a>
+                    <a href="file/wat.pdf">Download CV</a>
                 </div>
             </div>
         </div>
@@ -254,7 +254,7 @@
     <!--------------------------------->
 
     <footer>
-        <span>Created by <a href="#">Carlo Dominic M. Suaybaguio</a> | <span class="far fa-copyright"></span> 2023 All rights reserved.</span>
+        <span>Created by <a href="https://www.facebook.com/carlodominicsuaybaguio">Carlo Dominic M. Suaybaguio</a> | <span class="far fa-copyright"></span> 2023 All rights reserved.</span>
     </footer>
 
 
