--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Carlo Suaybaguio</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="paypal.me/emuflop">Donate</a>
+                <a href="paypal.me/emuflop" target="_blank">Donate</a>
             </div>
         </div>
     </section>
@@ -56,7 +56,7 @@
                 <div class="column right">
                     <div class="text">I'm Carlo and I'm a <span class="typing-2"></span></div>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident consectetur tempora quas repudiandae magni minima accusamus sunt esse laudantium. Perferendis, laudantium, reiciendis facere eum dolor dignissimos itaque magnam laborum nobis labore ullam sapiente esse ab minus blanditiis. Modi voluptates dolorem iure laboriosam error non totam veritatis tempore vel! Repudiandae voluptatem eum cupiditate officia rerum aliquam mollitia eos rem magni necessitatibus?</p>
-                    <a href="file/wat.pdf">Download CV</a>
+                    <a href="file/wat.pdf" target="_blank">Download CV</a>
                 </div>
             </div>
         </div>
@@ -104,7 +104,7 @@
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id assumenda nulla iusto doloribus rem deserunt nobis pariatur atque? Fugit, enim doloribus. Reprehenderit, maiores veritatis incidunt velit dignissimos quos modi quas accusamus corporis soluta exercitationem asperiores sequi voluptas neque, expedita assumenda necessitatibus sit voluptatum? Esse dolorem adipisci aperiam magnam nulla magni voluptas inventore nihil deleniti rem, impedit perspiciatis iste possimus tempora?</p>
-                    <a href="#">Read more</a>
+                    <a href="#" target="_blank">Read more</a>
                 </div>
                 <div class="column right">
                     <div class="bars">
@@ -254,7 +254,7 @@
     <!--------------------------------->
 
     <footer>
-        <span>Created by <a href="https://www.facebook.com/carlodominicsuaybaguio">Carlo Dominic M. Suaybaguio</a> | <span class="far fa-copyright"></span> 2023 All rights reserved.</span>
+        <span>Created by <a href="https://www.facebook.com/carlodominicsuaybaguio" target="_blank">Carlo Dominic M. Suaybaguio</a> | <span class="far fa-copyright"></span> 2023 All rights reserved.</span>
     </footer>
 
 
