--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">Suaybag<span>uio.</span></a></div>
+            <div class="logo"><a href="#" target="_blank">Suaybag<span>uio.</span></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn 1">Home</a></li>
                 <li><a href="#about" class="menu-btn 2">About</a></li>
