--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Carlo Suaybaguio</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="paypal.me/emuflop" target="_blank">Donate</a>
+                <a href="https://www.paypal.me/emuflop" target="_blank">Donate</a>
             </div>
         </div>
     </section>
