--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Suaybaguio Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="images/icon.jpg">
     <script src="https://kit.fontawesome.com/ca47faa581.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
@@ -55,7 +56,11 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Carlo and I'm a <span class="typing-2"></span></div>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident consectetur tempora quas repudiandae magni minima accusamus sunt esse laudantium. Perferendis, laudantium, reiciendis facere eum dolor dignissimos itaque magnam laborum nobis labore ullam sapiente esse ab minus blanditiis. Modi voluptates dolorem iure laboriosam error non totam veritatis tempore vel! Repudiandae voluptatem eum cupiditate officia rerum aliquam mollitia eos rem magni necessitatibus?</p>
+                    <p>Hi, my name is Carlo Dominic Suaybaguio. I am an IT student from University of Science and Technology of Southern Philippines.
+                        In my free time, I enjoy exercising to achieve a certain body fit and I also watch anime's and movies that peaks my interest in other words a certain movie that will grant me knowledge. 
+                        I am still studying in college yet I already have experiences that is computer related like being an NCII passer on TESDA Electronics Products Assembly and Servicing on my junior high days. 
+                        To sum it up, I am working hard to achieve what I want in my life and I am passionate about learning everything that I can that will be used in my future. If you want to learn more about me, 
+                        feel free to check my CV or message me below the page.</p>
                     <a href="file/wat.pdf" target="_blank">Download CV</a>
                 </div>
             </div>
@@ -72,7 +77,7 @@
                     <div class="box">
                         <i class="fas fa-paint-brush"></i>
                         <div class="text">Coming Soon!</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos vel odio consequatur mollitia, fugit dicta!</p>
+                        <p>Mr. Carlo Dominic Suaybaguio is currently learning and enhancing the necessary skills on web designing.</p>
                     </div>
                 </div>
 
@@ -80,7 +85,7 @@
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
                         <div class="text">Coming Soon!</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos vel odio consequatur mollitia, fugit dicta!</p>
+                        <p>Mr. Carlo Dominic Suaybaguio is currently learning and enhancing the necessary skills on advertising.</p>
                     </div>
                 </div>
 
@@ -88,7 +93,7 @@
                     <div class="box">
                         <i class="fas fa-code"></i>
                         <div class="text">Coming Soon!</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos vel odio consequatur mollitia, fugit dicta!</p>
+                        <p>Mr. Carlo Dominic Suaybaguio is currently learning and enhancing the necessary skills on app designing.</p>
                     </div>
                 </div>
             </div>
@@ -103,7 +108,8 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id assumenda nulla iusto doloribus rem deserunt nobis pariatur atque? Fugit, enim doloribus. Reprehenderit, maiores veritatis incidunt velit dignissimos quos modi quas accusamus corporis soluta exercitationem asperiores sequi voluptas neque, expedita assumenda necessitatibus sit voluptatum? Esse dolorem adipisci aperiam magnam nulla magni voluptas inventore nihil deleniti rem, impedit perspiciatis iste possimus tempora?</p>
+                    <p>Hello, my name is Carlo Dominic Suaybaguio and I am an IT student. I specialize only in fixing electronics board but I'm eager to learn skills to become a back-end developer. My creative skills include fixing basic computer defect units. I have experience using multiple tools that any technician used.
+                        I have received a NCII certificate on Electronics Products Assembly and Servicing from TESDA on my junior high. In conclusion, I am still a beginner when it comes on programming but I am eager to learn in order to help and provide service online.</p>
                     <a href="#" target="_blank">Read more</a>
                 </div>
                 <div class="column right">
@@ -156,36 +162,36 @@
                 <div class="card">
                     <div class="box">
                         <img src="images/locked.jpg" alt="">
-                        <div class="text">LF teammate</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <div class="text">[Hero Locked]</div>
+                        <p>Mr. Suaybaguio is looking for a Software Developer on the team.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="images/locked.jpg" alt="">
-                        <div class="text">LF teammate</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <div class="text">[Hero Locked]</div>
+                        <p>Mr. Suaybaguio is looking for a Full Stack Developer on the team.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="images/locked.jpg" alt="">
-                        <div class="text">LF teammate</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <div class="text">[Hero Locked]</div>
+                        <p>Mr. Suaybaguio is looking for a Front-End Developer on the team.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="images/locked.jpg" alt="">
-                        <div class="text">LF teammate</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <div class="text">[Hero Locked]</div>
+                        <p>Mr. Suaybaguio is looking for a Back-End Developer on the team.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="images/locked.jpg" alt="">
-                        <div class="text">LF teammate</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <div class="text">[Hero Locked]</div>
+                        <p>Mr. Suaybaguio is looking for a Project Manager on the team.</p>
                     </div>
                 </div>
             </div>
@@ -200,7 +206,7 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae dolore ullam dicta nemo laudantium rem perferendis et magni, dolores quo.</p>
+                    <p>I'd love to hear from you, whether it's to discuss a project, ask a question, or just say hi. You can reach me via email or find me via address given below.</p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
